// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Default Button 1`] = `
<DocumentFragment>
  <button
    class="sc-aXZVg SPVcy"
    label="Test Button"
    type="button"
  >
     Test Button
  </button>
</DocumentFragment>
`;

exports[`Button Disable Button 1`] = `
<DocumentFragment>
  <button
    class="sc-aXZVg gpVnru"
    disabled=""
    label="Test Button"
    type="button"
  >
     Test Button
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button 1`] = `
<DocumentFragment>
  <button
    class="sc-aXZVg FfRTb"
    label="Test Button"
    type="button"
  >
    <span
      class="sc-gEvEer jcjyZH"
    />
     Test Button
  </button>
</DocumentFragment>
`;

exports[`Button Outline Button 1`] = `
<DocumentFragment>
  <button
    class="sc-aXZVg flOzYF"
    label="Outline Button"
    type="button"
  >
     Outline Button
  </button>
</DocumentFragment>
`;

exports[`Button Small Button 1`] = `
<DocumentFragment>
  <button
    class="sc-aXZVg hzGBhO"
    label="Test Button"
    type="button"
  >
     Test Button
  </button>
</DocumentFragment>
`;
